--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <div class="wrap">
 <center><p style="font-size:3vw;" class="animated infinite wobble"><b><u>Happy Birthday Siya!</b></u></p><center>
 <p style="font-size:1vw;" > Hey Siya, Today is a very special and beautiful day for you. So let's make it the best celebration . &nbsp;<i class="em-svg em-blush"></i></p>
-<p style="font-size:1vw;"> Happiest Birthday Siya . I made all this as a birthday present to you. I am not physically not with you but i tried my best way to celebrate your birthday.
+<p style="font-size:1vw;"> Happiest Birthday Siya . I made all this as a birthday present to you. I am not physically  with you but i tried my best way to celebrate your birthday.
 Enjoy every single moment, fill it with your most beautiful smile and make it the best memory. </p><p style="font-size:3vw;" class="signed"><u>With Lots of Love  </b><b> <i class="em-svg em-heart"></i></p>
 </div>
 </div>
